--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     container_name: app
     networks:
       - my-app-network
+    entrypoint: dockerize -wait tcp://db:3306 -timeout 20s /docker-entrypoint.sh
     depends_on:
       - db
     restart: always
