--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -2,12 +2,20 @@ FROM node:slim
 
 WORKDIR /app
 
-COPY package.json .
+COPY *.json .
 
-COPY * .
+COPY docker-entrypoint.sh /docker-entrypoint.sh
+RUN chmod +x /docker-entrypoint.sh
+
+COPY *.js .
 
 RUN npm install --silent
 
-EXPOSE 3000
+RUN apt-get update && apt-get install -y wget
 
-ENTRYPOINT [ "npm", "start"]
+ENV DOCKERIZE_VERSION v0.6.1
+RUN wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
+    && tar -C /usr/local/bin -xzvf dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
+    && rm dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
+
+EXPOSE 3000
